# $Id$

2007-08-17	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: hex2Binary() added.

	* main/Flow/HttpRequest.class.php: setGetVar() and setPostVar() added.

2007-08-15	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
	was added. Bases on new HttpUrl parser.

2007-08-15	Anton E. Lebedevich

	*  main/Utils/Http/CurlHttpClient.class.php,
	main/Utils/Http/CurlHttpResponse.class.php: setMaxFileSize() added to
	limit download size.

2007-08-13	Vladimir A. Altuchov

	* core/Form/Primitives/PrimitiveTime.class.php: correct import
	condition.

2007-08-13	Anton E. Lebedevich
	
	* main/Utils/GenericUri.class.php, main/Utils/HttpUrl.class.php,
	main/Utils/TextUtils.class.php: url normalization moved from TextUtils
	to GenericUri and HttpUrl.

2007-08-13	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: getDayOfWeek now can return
	full day of week name.

2007-08-10	Dmitry A. Lomash

	* core/Base/Date.class.php: toISOString() convertes it according to
	ISO 8601 standard.

2007-08-09	Anton E. Lebedevich

	* main/Flow/HttpRequest.class, main/Utils/Http/CurlHttpClient.class.php:
	HttpRequest uri -> url.

2007-08-09	Dmitry A. Lomash

	* main/Utils/CodeGenerator.class.php: setCharactersAllowed() method 
	was added.

2007-08-08	Vladimir A. Altuchov

	* core/Form/Filters/: + lower case filter

2007-08-06	Ivan Y. Khvostishkov

	* main/Utils/IO/: File Streams accept both string names and resource
	descriptors in constructor.

2007-08-06	Konstantin V. Arkhipov

	* meta/: per-class fetch strategy implemented.

2007-08-05	Denis M. Gabaidulin

	* main/Base/ImageType.class.php: getExtension() helper method was added.

2007-07-30	Ivan Y. Khvostishkov

	* main/Utils/Html: HtmlTokenizer arrived from trunk.

	* main/Utils/GenericUri.class.php: rfc3986 uri implementation.

2007-07-27	Anton E. Lebedevich

	* main/Utils/ClassUtils.class.php: abstract class support added
	to isInstanceOf.

2007-07-23	Ivan Y. Khvostishkov
